@@ -1,3 +1,8 @@
+2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
+	* Added support for reiser4 (only creation atm, since the other functionality appears to be non-free software :/ )
+	  Also, libparted isn't able to detect reiser4 yet, a patch to fix this is underway, but i should probably add reiser4 detection to gparted as well.
+
 2004-12-28 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 	
 	* The Filesystemclasses: Changed 'bool Create( const Glib::ustring & device_path, const Partition & new_partition )'
